--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/angular": "8.6.0",
     "@angular/animations": "^8.2.0",
     "@angular/common": "^8.2.0",
     "@angular/compiler": "^8.2.0",
@@ -37,39 +36,50 @@
     "@angular/forms": "^8.2.0",
     "@angular/platform-browser": "^8.2.0",
     "@angular/platform-browser-dynamic": "^8.2.0",
+    "@angular/platform-server": "^8.2.0",
+    "@angular/pwa": "^0.803.8",
     "@angular/router": "^8.2.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.4.0",
-    "zone.js": "^0.9.1",
+    "@angular/service-worker": "^8.2.0",
     "@nestjs/common": "^6.2.4",
     "@nestjs/core": "^6.2.4",
     "@nestjs/platform-express": "^6.2.4",
-    "reflect-metadata": "^0.1.12"
+    "@ngrx/data": "^8.3.0",
+    "@ngrx/effects": "^8.3.0",
+    "@ngrx/entity": "^8.3.0",
+    "@ngrx/router-store": "^8.3.0",
+    "@ngrx/store": "^8.3.0",
+    "@nguniversal/express-engine": "^8.1.1",
+    "@nrwl/angular": "8.6.0",
+    "core-js": "^2.5.4",
+    "reflect-metadata": "^0.1.12",
+    "rxjs": "~6.4.0",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.803.3",
     "@angular/cli": "8.3.3",
-    "@nrwl/workspace": "8.6.0",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "eslint": "6.1.0",
-    "typescript": "~3.4.5",
-    "prettier": "1.18.2",
-    "@nrwl/nest": "8.6.0",
     "@angular/compiler-cli": "^8.2.0",
     "@angular/language-service": "^8.2.0",
-    "@angular-devkit/build-angular": "^0.803.3",
-    "codelyzer": "~5.0.1",
-    "jest-preset-angular": "7.0.0",
-    "@nrwl/jest": "8.6.0",
-    "jest": "24.1.0",
-    "@types/jest": "24.0.9",
-    "ts-jest": "24.0.0",
-    "cypress": "3.4.1",
-    "@nrwl/cypress": "8.6.0",
-    "@nrwl/node": "8.6.0",
     "@nestjs/schematics": "^6.3.0",
-    "@nestjs/testing": "^6.2.4"
+    "@nestjs/testing": "^6.2.4",
+    "@ngrx/store-devtools": "^8.3.0",
+    "@nrwl/cypress": "8.6.0",
+    "@nrwl/jest": "8.6.0",
+    "@nrwl/nest": "8.6.0",
+    "@nrwl/node": "8.6.0",
+    "@nrwl/workspace": "8.6.0",
+    "@types/jest": "24.0.9",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~5.0.1",
+    "cypress": "3.4.1",
+    "dotenv": "6.2.0",
+    "eslint": "6.1.0",
+    "jest": "24.1.0",
+    "jest-preset-angular": "7.0.0",
+    "prettier": "1.18.2",
+    "ts-jest": "24.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.4.5"
   }
 }
