Adds compodoc generation to circleci and nest swagger to be served at /api

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,3 +40,6 @@ jobs:
       - run:
           command: yarn affected:build --all
           name: Affected Build
+      - run:
+          command: yarn doc
+          name: Generate documentation
