--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "doc": "compodoc -p tsconfig.json -s"
+    "doc": "compodoc -p tsconfig.json"
   },
   "private": true,
   "dependencies": {
