--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
     "affected:e2e": "nx affected:e2e",
-    "affected:test": "nx affected:test",
+    "affected:test": "nx affected:test --ci",
     "affected:lint": "nx affected:lint",
     "affected:dep-graph": "nx affected:dep-graph",
     "affected": "nx affected",
@@ -53,6 +53,7 @@
     "@nguniversal/express-engine": "^8.1.1",
     "@nrwl/angular": "8.6.0",
     "core-js": "^2.5.4",
+    "jest-junit": "^8.0.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "~6.4.0",
     "swagger-ui-express": "^4.1.2",
@@ -79,6 +80,7 @@
     "dotenv": "6.2.0",
     "eslint": "6.1.0",
     "jest": "24.1.0",
+    "jest-junit-reporter": "^1.1.0",
     "jest-preset-angular": "7.0.0",
     "prettier": "1.18.2",
     "ts-jest": "24.0.0",
